@@ -14,6 +14,7 @@ net.sf.jasperreports.query.executer.factory.ejbql=net.sf.jasperreports.engine.qu
 net.sf.jasperreports.query.executer.factory.EJBQL=net.sf.jasperreports.engine.query.JRJpaQueryExecuterFactory
 net.sf.jasperreports.subreport.runner.factory=net.sf.jasperreports.engine.fill.JRThreadSubreportRunnerFactory
 net.sf.jasperreports.virtualizer.files.delete.on.exit=true
+net.sf.jasperreports.export.graphics2d.min.job.size=true
 net.sf.jasperreports.export.pdf.force.linebreak.policy=false
 net.sf.jasperreports.export.pdf.graphics.shapes=true
 net.sf.jasperreports.viewer.render.buffer.max.size=0
